{{$NEXT}}
    [ ENHANCEMENTS ]
    * GH#23 - Move document class config to the singleton object

    [ BUGS ]
    * Fixed Mongoose::Join method to inflate rels (used by fix_integrity).

0.36      2015-12-27 15:33:50+01:00 Europe/Madrid
    [ BUGS ]
    * Tests sould be skipped when there is no server available.
    * Tests sould not drop db when it was not created.

0.35      2015-09-25 04:09:11+02:00 Europe/Madrid
    [ ENHANCEMENTS ]
    * Ensure GridFS relations are DBRef's on v1.x.x
    * Each tests now creates a random db and drops it at the END (allow parallel run)

0.34      2015-09-25 02:55:32+02:00 Europe/Madrid
    [ CLEANUP ]
    * Removed debug code from GridFS tests

0.33      2015-09-25 02:49:43+02:00 Europe/Madrid
    [ ENHANCEMENTS ]
    * #42 - Support for MongoDB driver v1.x.x series while still supporting v0.x

    [ CLEANUP ]
    * Some code cleanup

0.32      2015-06-28 17:04:24+02:00 Europe/Madrid
    [ BUGS ]
    * GH#40 - Prevent unsaved objects from removing all docs when calling delete().

    [ ENHANCEMENTS ]
    * Skip unblessing for DateTime::Tiny the same way as for DateTime objects.
    * GH#32 - Ensure numbers are stored as numbers for Num based types.

    [ CLEANUP ]
    * Cursor wrapper cleanup
    * Engine collapse/expand small refactor

    [ DOCS ]
    * GH#31 - Remove cookbook recomendation to use Raw trait on DateTime fields.

0.31      2015-04-19 03:00:50+02:00 Europe/Madrid
    [ CLEANUP ]
    * Changes file fixed after last release problems

0.30 Sun Apr 19 2:56:00 CEST 2015
    [ ENHANCEMENTS ]
    * find_one() now accepts a MongoDB::OID object

    [ CLEANUP ]
    * Removed unused class Mongoose::Digest
    * Bumped dependency versions and removed back-compat code

0.29 Sat Apr 18 23:56:30 CEST 2015
    [ BUGS ]
    * Fixed test that was failing randombly on mongodb v2.6.x (diegok)

0.28 Sat Apr 18 16:51:40 CEST 2015
    [ BUGS ]
    * ensure all DBRef's are sorted hashes to make it work with mongodb v2.6.x (diegok)
